<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewActDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etActDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enterdesc" />

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duedate"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterdue"
        android:inputType="textPersonName" />


</LinearLayout>